# FastAPI_Template

./: .env.template  README.md  main.py  pyproject.toml
api/services/: ExampleService.py
config/: settings.py
config/base/: base.py  db_helper.py
