[tool.poetry]
name = "fastapi-template"
version = "0.1.0"
description = ""
authors = ["Stranix <Phantom2525@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.2"
pydantic-settings = "^2.6.0"
python-multipart = "^0.0.12"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}
asyncpg = "^0.30.0"
alembic = "^1.13.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
